--- a/formulario.html
+++ b/formulario.html
@@ -130,7 +130,7 @@
                 type="text"
                 class="form-control"
                 id="direccion"
-                placeholder="Ej: Calle Duarte #25, Sector Centro, Santo Domingo"
+                placeholder="EEj: 123 Main Street, Downtown, Los Angeles, CA 90012"
                 required>
             </div>
 
