--- a/formulario.html
+++ b/formulario.html
@@ -27,7 +27,7 @@
   >
 
   <div class="d-flex justify-content-center align-items-center gap-1">
-    <strong class="fs-5">Amira Al-dah</strong>
+    <strong class="fs-5">Amira Al-dahab</strong>
     <span 
       title="Perfil verificado"
       style="
