--- a/formulario.html
+++ b/formulario.html
@@ -10,6 +10,24 @@
   <!-- Bootstrap -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
+  <!-- CARGANDO -->
+  <div 
+    id="loadingOverlay"
+    style="
+      display:none;
+      position:fixed;
+      inset:0;
+      background:rgba(255,255,255,0.9);
+      z-index:9999;
+      align-items:center;
+      justify-content:center;
+      flex-direction:column;
+    "
+  >
+    <div class="spinner-border text-success mb-3"></div>
+    <strong>Enviando solicitud, por favor espere...</strong>
+  </div>
+
 <body class="bg-light">
 
 <div class="container py-5">
@@ -209,9 +227,20 @@ montoInput.addEventListener("input", () => {
   }
 });
 
-// ENVÍO
+    // ENVÍO
 document.getElementById("formulario").addEventListener("submit", e => {
   e.preventDefault();
+
+  if (!navigator.onLine) {
+    alert("No hay conexión a internet.");
+    return;
+  }
+
+  const overlay = document.getElementById("loadingOverlay");
+  const boton = e.target.querySelector("button");
+
+  boton.disabled = true;
+  overlay.style.display = "flex";
 
   const data = {
     nombre: nombre.value,
@@ -220,7 +249,7 @@ document.getElementById("formulario").addEventListener("submit", e => {
     estadoCivil: estadoCivil.value,
     hijos: hijos.value || 0,
     pais: pais.value,
-    celular: codigoSpan.textContent + celular.value,
+    celular: celular.value,
     direccion: direccion.value,
     monto: monto.value,
     impuesto: impuestoValor.textContent,
@@ -228,18 +257,25 @@ document.getElementById("formulario").addEventListener("submit", e => {
     confirmacion: "Aceptado"
   };
 
-  fetch("https://script.google.com/macros/s/AKfycbzULix9PmJbi9VPIm4gF0aa_a_SnXZCnwf6rpgGWN4Kni-SwAQy2aQxuhqaGuz4mjNLDA/exec", {
+  // SIMULACIÓN DE CARGA 4 SEGUNDOS
+  setTimeout(() => {
+     fetch("https://script.google.com/macros/s/AKfycbzULix9PmJbi9VPIm4gF0aa_a_SnXZCnwf6rpgGWN4Kni-SwAQy2aQxuhqaGuz4mjNLDA/exec", {
     method: "POST",
     body: JSON.stringify(data)
   })
-  .then(() => {
-    window.location.href = "enviado.html";
-  })
-  .catch(() => {
-    alert("Error al enviar la solicitud");
-  });
+    .then(() => {
+      window.location.href = "enviado.html";
+    })
+    .catch(() => {
+      overlay.style.display = "none";
+      boton.disabled = false;
+      alert("Error al enviar la solicitud");
+    });
+  }, 4000);
 });
 </script>
+
+
 
 </body>
 </html>
